@@ -1,3 +1,9 @@
+2006-11-12  Jason Merrill  <jason@redhat.com>
+	    Andrew Pinski <pinskia@physics.uc.edu>
+
+	PR middle-end/28915
+	* gcc.target/i386/vectorize1.c: New.
+
 2006-11-13  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline:
